Fix Carousel Overflow Bug (#73)
* Removed CSS that was causing the carousel to be visible at high width resolutions

* Added max-width to 1400-1440px

* Changed to width instead of max-width and min-width

--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,15 @@ div:focus {
   .carousel-wrapper {
     overflow-x: visible !important;
   }
+
+  .content {
+    margin: auto;
+    width: 1440px;
+  }
+
+  #root {
+    overflow-x: hidden;
+  }
 }
 
 @media screen and (min-width: 1800px) {
